# SmolVLA-MoE

./: .gitignore  README.md  pyproject.toml
configs/dataset/: libero.yaml  libero_official_smolvla.yaml
configs/model/: official_smolvla_dense_libero.yaml  official_smolvla_dense_libero_hf.yaml  official_smolvla_moe_libero.yaml  smolvla_moe_0p5b_active.yaml  smolvla_moe_tiny.yaml
configs/train/: hf_smolvla_libero_official_preset_finetune_8gpu.yaml  libero_8gpu.yaml  libero_smoke.yaml  official_smolvla_dense_libero_8gpu.yaml  official_smolvla_dense_libero_official_preset_8gpu.yaml  official_smolvla_moe_libero_8gpu.yaml
docs/: architecture.md  vastai_runbook.md
scripts/: eval_libero.py  eval_official_smolvla_lerobot.py  export_official_smolvla_checkpoint.py  print_model_size.py  serve_libero_policy.py  serve_official_smolvla_moe_policy.py  smoke_forward.py  train.py  train_official_smolvla_dense.py  train_official_smolvla_moe.py  watch_official_smolvla_moe_eval.py  watch_smolvla_libero_repro.py
src/smolvla_moe/: __init__.py  config.py
src/smolvla_moe/data/: __init__.py  batch.py  build.py  collate.py  lerobot_dataset.py  synthetic.py  text.py
src/smolvla_moe/models/: __init__.py  action_decoder.py  backbone.py  flash.py  flow_matching.py  moe.py  policy.py
src/smolvla_moe/official/: __init__.py  data.py  dense_policy.py  dense_trainer.py  libero_dataset.py  moe.py  policy.py  serving.py  stats.py  trainer.py
src/smolvla_moe/serving/: __init__.py  libero_policy.py
src/smolvla_moe/training/: __init__.py  observability.py  (+2 more)
tests/: test_model_smoke.py
(+1 files in other folders)
