[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smolvla-moe"
version = "0.1.0"
description = "SmolVLA-MoE: compact flow-matching VLA with a sparse MoE action expert"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pyyaml>=6.0",
  "torch>=2.3",
  "tqdm>=4.66",
]

[project.optional-dependencies]
hf = [
  "accelerate>=1.0",
  "pillow>=10.0",
  "transformers>=4.53",
]
train = [
  "datasets>=3.0",
  "psutil>=5.9",
  "wandb>=0.19",
]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["smolvla_moe*"]

[tool.ruff]
line-length = 120
target-version = "py310"
